Ultimate fixes before merge: remove experimental notebook single usage of GetSchemaProductOut for all gets add exception handler usage for exceptions in repository remove product None management (is already managed with HttpCustomException 404) Generate openapi.yaml
