# app/v1/controller/products_service/products_service.py
@@ -3,7 +3,7 @@ from typing import List, Optional
 from v1.config.config import Settings, get_config
 from v1.controller.base_service import BaseService
 from v1.dao.products_dao.products_dao import ProductsDAO
-from v1.model.schemas.schema import PostSchemaProductIn, PostSchemaProductOut, GetSchemaProductOut, GetSchemaProductOutByName, GetSchemaProductOutAll
+from v1.model.schemas.schema import PostSchemaProductIn, PostSchemaProductOut, GetSchemaProductOut
 
 _config: Settings = get_config()
 
@@ -29,7 +29,7 @@ class ProductsService(BaseService):
         return product
     
 
-    def get_products(self) -> List[GetSchemaProductOutAll]:
+    def get_products(self) -> List[GetSchemaProductOut]:
         products = self.products_dao.get_products()
         self.logger.info(f"{len(products)} products retrieved.")
         return products
@@ -39,7 +39,7 @@ class ProductsService(BaseService):
         self.logger.info("product retrieved.")
         return product
     
-    def get_product_byname(self, name:str) -> List[GetSchemaProductOutByName]:
+    def get_product_byname(self, name:str) -> List[GetSchemaProductOut]:
         product = self.products_dao.get_product_byname(name)
         self.logger.info("product retrieved.")
         return product
