# app/v1/model/repository/products_repository/products_repository.py
@@ -4,7 +4,7 @@ from v1.model.db_schemas.db_schema import Product, ProductEssential
 from v1.model.repository.repository import Repository, Condition
 from v1.utils.exception import HttpCustomException, custom_exception_handler
 from typing import List, Optional
-from v1.model.schemas.schema import GetSchemaProductOut, GetSchemaProductOutByName, GetSchemaProductOutAll
+from v1.model.schemas.schema import GetSchemaProductOut
 
 _config: Settings = get_config()
 logger: logging.Logger = logging.getLogger(_config.service_name)
@@ -32,7 +32,7 @@ class ProductsRepository(Repository):
             exception_handler.handle_custom_exception(f"An error occurred creating product document (ID: {ID})")
 
 
-    def get_products(self) -> List[GetSchemaProductOutAll]:
+    def get_products(self) -> List[GetSchemaProductOut]:
         try:
             products = self._get_all()
 
@@ -52,10 +52,6 @@ class ProductsRepository(Repository):
         try:
             product = self._get(ID)
 
-            if product is None:
-                logger.info("No products found matching the criteria.")
-                return dict()
-
             return product
         
         except HttpCustomException:
@@ -64,7 +60,7 @@ class ProductsRepository(Repository):
             exception_handler.handle_custom_exception(f"Unexpected error retrieving products")
 
 
-    def get_product_byname(self, name:str) -> List[GetSchemaProductOutByName]:
+    def get_product_byname(self, name:str) -> List[GetSchemaProductOut]:
         try:
             product = self._get_byname(name)
 
